--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
-body {
+html,
+body,
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  color: #ececec;
+  font-weight: 400;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
