--- a/src/components/Companies/AllCampaigns/all-campaigns.css
+++ b/src/components/Companies/AllCampaigns/all-campaigns.css
@@ -1,8 +1,3 @@
-.all-campaigns-wrapper {
-  padding: 20px;
-  margin: auto;
-  margin-top: 20px;
-  width: 80vw;
-  height: max-content;
+.all-campaigns-container {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
