--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ html,
 body,
 #root {
   height: 100%;
+  width: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
   padding: 0;
