--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body,
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  color: #ececec;
+  color: #212429;
   font-weight: 400;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
