--- a/src/components/Companies/CompanyProfile/company-profile.css
+++ b/src/components/Companies/CompanyProfile/company-profile.css
@@ -1,35 +1,12 @@
-.card-profile-data-container {
+.card-company-profile-container {
   height: fit-content;
   background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
-.profile-bio-container {
-  height: 200px;
-  background-color: #f5f5f5;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.profile-icon-container {
-  width: 100px;
-  height: 100px;
-}
-
-.edit-btn {
-  height: 21px;
-  background-color: transparent;
-  color: #3a3b83;
-  outline: none;
-  box-shadow: none;
+.company-profile-details {
   border: none;
-}
-
-.edit-icon {
-  width: 20px;
-  height: 20px;
-}
-
-.edit-icon:hover {
-  width: 21px;
-  height: 21px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
