create dashboard, abort axios and more...

--- a/src/components/Companies/CompanyProfile/company-profile.css
+++ b/src/components/Companies/CompanyProfile/company-profile.css
@@ -1,12 +1,12 @@
 .card-company-profile-container {
   height: fit-content;
   background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 .company-profile-details {
   border: none;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
