--- a/src/components/Companies/AddCampaign/add-campaign.css
+++ b/src/components/Companies/AddCampaign/add-campaign.css
@@ -5,8 +5,8 @@
   border: none;
   margin: 0;
   padding: 0;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 .choose-campaign-btn:hover {
