--- a/src/components/Companies/AllCampaigns/all-campaigns.css
+++ b/src/components/Companies/AllCampaigns/all-campaigns.css
@@ -1,3 +1,4 @@
 .all-campaigns-container {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
