--- a/src/components/Companies/Dashboard/dashboard.css
+++ b/src/components/Companies/Dashboard/dashboard.css
@@ -5,6 +5,31 @@
 .dashboard-card-container {
   border: none;
   height: 300px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
+.dashboard-card-container-right {
+  border: none;
+  height: 624px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
+.see-more-btn {
+  width: 140px;
+  height: 50px;
+  background-color: transparent;
+  outline: none;
+  box-shadow: none;
+  border: none;
+}
+
+.see-more-btn:hover {
+  border: solid 1px #212429;
+  border-radius: 5px;
 }
