--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body,
   margin: 0;
   box-sizing: border-box;
   color: #212429;
+  background-color: #f7f7f7;
   font-weight: 400;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
