--- a/src/components/Companies/CompanyProfile/company-profile.css
+++ b/src/components/Companies/CompanyProfile/company-profile.css
@@ -10,3 +10,26 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
+
+.company-profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: solid 0.5px #e2e2e2;
+}
+
+.add-img-small-btn-container {
+  min-width: 22px;
+  min-height: 22px;
+}
+
+.add-img-small-btn {
+  position: relative;
+  top: 138px;
+  left: 55px;
+  width: 20px;
+  height: 20px;
+  color: #212429 !important;
+  background-color: #fff;
+  border-radius: 50%;
+}
