--- a/src/components/Companies/SingleCampaignRow/single-campaign-row.css
+++ b/src/components/Companies/SingleCampaignRow/single-campaign-row.css
@@ -5,21 +5,6 @@
   border: solid 0.5px #e2e2e2;
 }
 
-.status-small-circle-container {
-  min-width: 12px;
-  min-height: 12px;
-}
-
-.status-small-circle {
-  position: relative;
-  bottom: 13px;
-  left: 10px;
-  width: 10px;
-  height: 10px;
-  border: solid 1px #f8f8f8;
-  border-radius: 50%;
-}
-
 .campaign-row-btn {
   width: 120px;
   height: 50px;
@@ -32,4 +17,9 @@
 .campaign-row-btn:hover {
   border: solid 1px #212429;
   border-radius: 5px;
+}
+
+.status-container {
+  height: 30px;
+  border-radius: 10px;
 }
