--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body,
   height: 100%;
   width: 100%;
   align-items: center;
+  justify-content: space-between;
   display: flex;
   flex-direction: column;
   padding: 0;
