--- a/src/components/Companies/GlobalCampaign/global-campaign.css
+++ b/src/components/Companies/GlobalCampaign/global-campaign.css
@@ -85,3 +85,19 @@
   border: solid 1px #212429;
   border-radius: 5px;
 }
+
+.clear-selection-btn-new-camp {
+  width: 150px;
+  height: 50px;
+  background-color: transparent;
+  color: #212429;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  margin-left: 10px;
+}
+
+.clear-selection-btn-new-camp:hover {
+  border: solid 1px #212429;
+  border-radius: 5px;
+}
