--- a/src/components/Companies/Dashboard/dashboard.css
+++ b/src/components/Companies/Dashboard/dashboard.css
@@ -33,3 +33,31 @@
   border: solid 1px #212429;
   border-radius: 5px;
 }
+
+.profile-icon {
+  width: 200px;
+  height: 200px;
+}
+
+.dashboard-company-profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: solid 0.5px #e2e2e2;
+}
+
+.dashboard-add-img-small-btn-container {
+  min-width: 22px;
+  min-height: 22px;
+}
+
+.dashboard-add-img-small-btn {
+  position: relative;
+  top: 49px;
+  left: 142px;
+  width: 20px;
+  height: 20px;
+  color: #212429 !important;
+  background-color: #fff;
+  border-radius: 50%;
+}
